# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./brand-profile";
 export * from "./projects";
 export * from "./decks";
+export * from "./slide-templates";
